Typographie - H1 - filet rose - restriction de l'espacement à 4px

--- a/src/sdg/scss/base/_typography.scss
+++ b/src/sdg/scss/base/_typography.scss
@@ -20,7 +20,7 @@ h1, .qc-h1 {
     display:block;
     margin: 0;
     width: rem(6 * $base-spacer);
-    padding-top: rem($base-spacer);
+    padding-top: rem($base-spacer * .5);
     border-bottom: 4px solid token-value(color, accent);
   }
 }
