--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1300,10 +1300,7 @@ qc-icon {
   background-color: var(--qc-color-blue-pale);
 }
 .qc-notice.qc-information .icon-container [role=img] {
-  background-color: var(--qc-color-blue-dark);
-}
-.qc-notice.qc-information .icon-container [role=img][data-img-type=success], .qc-notice.qc-information .icon-container [role=img][data-img-type=error] {
-  background-color: var(--qc-color-blue-regular);
+  background-color: var(--qc-color-blue-piv);
 }
 .qc-notice.qc-warning .icon-container {
   background-color: var(--qc-color-yellow-pale);
@@ -1311,34 +1308,22 @@ qc-icon {
 .qc-notice.qc-warning .icon-container [role=img] {
   background-color: var(--qc-color-yellow-dark);
 }
-.qc-notice.qc-warning .icon-container [role=img][data-img-type=success], .qc-notice.qc-warning .icon-container [role=img][data-img-type=error] {
-  background-color: var(--qc-color-yellow-regular);
-}
 .qc-notice.qc-neutral .icon-container {
   background-color: var(--qc-color-grey-pale);
 }
 .qc-notice.qc-neutral .icon-container [role=img] {
   background-color: var(--qc-color-grey-dark);
 }
-.qc-notice.qc-neutral .icon-container [role=img][data-img-type=success], .qc-notice.qc-neutral .icon-container [role=img][data-img-type=error] {
-  background-color: var(--qc-color-grey-regular);
-}
 .qc-notice.qc-error .icon-container {
   background-color: var(--qc-color-red-pale);
 }
 .qc-notice.qc-error .icon-container [role=img] {
-  background-color: var(--qc-color-red-dark);
-}
-.qc-notice.qc-error .icon-container [role=img][data-img-type=success], .qc-notice.qc-error .icon-container [role=img][data-img-type=error] {
   background-color: var(--qc-color-red-regular);
 }
 .qc-notice.qc-success .icon-container {
   background-color: var(--qc-color-green-pale);
 }
 .qc-notice.qc-success .icon-container [role=img] {
-  background-color: var(--qc-color-green-dark);
-}
-.qc-notice.qc-success .icon-container [role=img][data-img-type=success], .qc-notice.qc-success .icon-container [role=img][data-img-type=error] {
   background-color: var(--qc-color-green-regular);
 }
 
