--- a/public/css/qc-doc-sdg.css
+++ b/public/css/qc-doc-sdg.css
@@ -1,144 +1,3 @@
-@charset "UTF-8";
-/*
-Return rem size from pixel size according to root font-size as define in settings
-Always use this function for rem values
-// root font-size : 100 %,
-// foo.scss
-.foo { font-size: rem(16); }
-// foo.css
-.foo { font-size: 1rem; }
-
-// root font-size : 62.5 %,
-// foo.scss
-.foo { font-size: rem(16); }
-// foo.css
-.foo { font-size: 1.6rem; }
-*/
-/*
-Return rem size from pixel size according to root font-size as define in settings
-Always use this function for rem values
-// root font-size : 100 %,
-// foo.scss
-.foo { font-size: rem(16); }
-// foo.css
-.foo { font-size: 1rem; }
-
-// root font-size : 62.5 %,
-// foo.scss
-.foo { font-size: rem(16); }
-// foo.css
-.foo { font-size: 1.6rem; }
-*/
-/* TODO voir si meilleure façon d'intégrer en scss... */
-.qc-icon {
-  display: inline-block;
-  content: "";
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 100% auto;
-  min-width: 32px;
-  height: 32px;
-}
-.qc-icon.qc-icon-sm {
-  min-width: 12px;
-  height: 12px;
-}
-.qc-icon.qc-icon-md {
-  min-width: 20px;
-  height: 20px;
-}
-.qc-icon.qc-icon-lg {
-  min-width: 40px;
-  height: 40px;
-}
-.qc-icon.qc-external-link {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#external-link);
-}
-.qc-icon.qc-warning {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#warning);
-}
-.qc-icon.qc-arrow-up-white {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#arrow-up-white);
-}
-.qc-icon.qc-clipboard {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#clipboard);
-}
-.qc-icon.qc-error {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#error);
-}
-.qc-icon.qc-error-white {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#error-white);
-}
-.qc-icon.qc-information {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#information);
-}
-.qc-icon.qc-information-white {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#information-white);
-}
-.qc-icon.qc-minus {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#minus);
-}
-.qc-icon.qc-plus {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#plus);
-}
-.qc-icon.qc-question-mark {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#question-mark);
-}
-.qc-icon.qc-success {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#success);
-}
-.qc-icon.qc-success-white {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#success-white);
-}
-.qc-icon.qc-xclose-white {
-  width: 16px;
-  height: 16px;
-  min-width: 16px;
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#xclose-white);
-}
-.qc-icon.qc-xclose-blue {
-  width: 16px;
-  height: 16px;
-  min-width: 16px;
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#xclose-blue);
-}
-.qc-icon.qc-chevron-blue, .qc-icon.qc-chevron-white {
-  width: 16px;
-  min-width: 16px;
-  height: 10px;
-}
-.qc-icon.qc-chevron-blue {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#chevron-blue);
-}
-.qc-icon.qc-chevron-white {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#chevron-white);
-}
-.qc-icon.qc-facebook {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#facebook);
-}
-.qc-icon.qc-linkedin {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#linkedin);
-  height: 30px;
-}
-.qc-icon.qc-twitter {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#twitter);
-}
-.qc-icon.qc-youtube {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#youtube);
-}
-.qc-icon.qc-warning-alert-icon {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#warning);
-}
-.qc-icon.qc-general-alert-icon {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#information);
-}
-.qc-icon.qc-search {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#loupe-piv-droite);
-}
-.qc-icon.qc-search-submit {
-  background-image: url(../img/qc-sprite.svg?v=1.2.2#loupe-piv-fonce);
-}
-
 qc-code {
   display: block;
   max-inline-size: var(--qc-max-content-width);
@@ -198,24 +57,138 @@ pre code button.copied .copied, pre .qc-code button.copied .copied {
   margin-top: var(--qc-spacer-lg);
 }
 
-.qc-shading-0 {
-  box-shadow: 0 0 0 var(--qc-color-grey-light);
+pre code.hljs {
+  display: block;
+  overflow-x: auto;
+  padding: 1em;
 }
 
-.qc-shading-1, .btn.btn-primary {
-  box-shadow: 0 1px 4px var(--qc-color-grey-light);
+code.hljs {
+  padding: 0.4rem;
+}
+
+pre code.hljs {
+  display: block;
+  overflow-x: auto;
+  padding: 1.6rem;
+}
+
+code.hljs {
+  padding: 0.4rem;
+}
+
+/* end baseline CSS */
+.hljs {
+  background: var(--qc-color-grey-pale);
+  color: var(--qc-color-blue-dark);
+}
+
+/* Base color: saturation 0; */
+.hljs-subst {
+  /* default */
+}
+
+/* purposely ignored */
+.hljs-comment {
+  color: var(--qc-color-grey-dark);
+}
+
+.hljs-tag,
+.hljs-punctuation {
+  color: var(--qc-color-blue-medium);
+}
+
+.hljs-tag .hljs-name,
+.hljs-tag .hljs-attr {
+  color: var(--qc-color-blue-dark);
+}
+
+.hljs-keyword,
+.hljs-attribute,
+.hljs-selector-tag,
+.hljs-meta .hljs-keyword,
+.hljs-doctag,
+.hljs-name {
+  font-weight: bold;
+}
+
+/* User color: hue: 0 */
+.hljs-type,
+.hljs-string,
+.hljs-number,
+.hljs-selector-id,
+.hljs-selector-class,
+.hljs-quote,
+.hljs-template-tag,
+.hljs-deletion {
+  color: var(--qc-color-red-dark);
+}
+
+.hljs-title,
+.hljs-section {
+  color: var(--qc-color-red-dark);
+  font-weight: bold;
+}
+
+.hljs-regexp,
+.hljs-symbol,
+.hljs-variable,
+.hljs-template-variable,
+.hljs-link,
+.hljs-selector-attr,
+.hljs-operator,
+.hljs-selector-pseudo {
+  color: var(--qc-color-pink-regular);
+}
+
+/* Language color: hue: 90; */
+.hljs-literal {
+  color: var(--qc-color-green-regular);
+}
+
+.hljs-built_in,
+.hljs-bullet,
+.hljs-code,
+.hljs-addition {
+  color: var(--qc-color-green-dark);
+}
+
+/* Meta color: hue: 200 */
+.hljs-meta {
+  color: var(--qc-color-blue-medium);
+}
+
+.hljs-meta .hljs-string {
+  color: var(--qc-color-blue-regular);
+}
+
+/* Misc effects */
+.hljs-emphasis {
+  font-style: italic;
+}
+
+.hljs-strong {
+  font-weight: bold;
+}
+
+.qc-shading-0 {
+  border: 1px solid var(--qc-box_shadow-0-color);
+}
+
+.qc-shading-1 {
+  box-shadow: 0 var(--qc-box_shadow-1-offset) var(--qc-box_shadow-1-blur) var(--qc-color-box_shadow);
 }
 
 .qc-shading-2 {
-  box-shadow: 0 2px 8px var(--qc-color-grey-light);
+  box-shadow: 0 var(--qc-box_shadow-2-offset) var(--qc-box_shadow-2-blur) var(--qc-color-box_shadow);
 }
 
 .qc-shading-3 {
-  box-shadow: 0 4px 16px var(--qc-color-grey-light);
+  box-shadow: 0 var(--qc-box_shadow-3-offset) var(--qc-box_shadow-3-blur) var(--qc-color-box_shadow);
 }
 
 .qc-shading-4 {
-  box-shadow: 0 6px 24px var(--qc-color-grey-light);
+  box-shadow: 0 var(--qc-box_shadow-4-offset) var(--qc-box_shadow-4-blur) var(--qc-color-box_shadow);
 }
 
 .btn {
@@ -223,9 +196,10 @@ pre code button.copied .copied, pre .qc-code button.copied .copied {
   font-size: var(--qc-font-size-md);
   line-height: var(--qc-line-height-md);
   font-weight: var(--qc-font-weight-regular);
+  font-family: var(--qc-font-family-content);
   display: inline-block;
   box-sizing: border-box;
-  min-width: 7rem;
+  min-width: 11.2rem;
   transition: all 0.24s ease-in-out;
   text-align: center;
   vertical-align: middle;
@@ -236,27 +210,29 @@ pre code button.copied .copied, pre .qc-code button.copied .copied {
   cursor: pointer;
 }
 .btn.btn-sm {
-  min-width: 5rem;
+  min-width: 8rem;
   padding: calc(var(--qc-spacer-xs) - 1px) calc(var(--qc-spacer-sm) - 1px);
   border: 1px solid transparent;
 }
 .btn.btn-primary {
-  color: #fff;
+  color: var(--qc-color-background);
   border-color: var(--qc-color-blue-piv);
   background-color: var(--qc-color-blue-piv);
+  box-shadow: 0 var(--qc-box_shadow-1-offset) var(--qc-box_shadow-1-blur) var(--qc-color-box_shadow);
 }
 .btn.btn-primary:hover {
-  border-color: #156bb2;
-  background-color: #156bb2;
+  border-color: var(--qc-color-blue-regular);
+  background-color: var(--qc-color-blue-regular);
 }
-.btn.btn-primary:focus {
-  border-color: var(--qc-color-blue-dark);
-  background-color: #156bb2;
+.btn.btn-primary:focus, .btn.btn-primary:focus-visible {
+  border-color: var(--qc-color-blue-regular);
+  background-color: var(--qc-color-blue-regular);
   box-shadow: 0 2px 8px rgba(34, 54, 84, 0.24), 0 0 0 2px var(--qc-color-blue-light);
+  outline: none;
 }
 .btn.btn-primary:active {
-  border-color: #3783c9;
-  background-color: #3783c9;
+  border-color: var(--qc-color-blue-regular_light);
+  background-color: var(--qc-color-blue-regular_light);
 }
 
 table.qc-table {
@@ -292,27 +268,71 @@ table.qc-table.qc-bordered tbody th, table.qc-table.qc-bordered tbody td {
   border-bottom: 1px solid var(--qc-color-grey-light);
 }
 
+.ui-autocomplete {
+  max-height: calc(16rem + 2px) !important;
+  overflow-y: auto !important;
+  list-style-type: none !important;
+  padding-left: 0 !important;
+  margin: 0 !important;
+  border: 1px solid var(--qc-color-grey-medium);
+  background-color: var(--qc-color-background);
+  box-shadow: 0 var(--qc-box_shadow-4-offset) var(--qc-box_shadow-4-blur) var(--qc-color-box_shadow);
+  cursor: pointer;
+}
+
+.ui-menu-item {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+.ui-menu-item-wrapper {
+  padding: 0.8rem;
+}
+
+.ui-state-active {
+  background-color: var(--qc-color-blue-pale);
+}
+
+.ui-autocomplete::-webkit-scrollbar {
+  width: 8px;
+  margin-left: 5px;
+}
+
+/* Track */
+.ui-autocomplete::-webkit-scrollbar-track {
+  background: var(--qc-color-background);
+}
+
+/* Handle */
+.ui-autocomplete::-webkit-scrollbar-thumb {
+  background: var(--qc-color-blue-piv);
+  border-radius: 15px;
+}
+
+/* Handle on hover */
+.ui-autocomplete::-webkit-scrollbar-thumb:hover {
+  background: var(--qc-color-blue-piv);
+}
+
+.ui-helper-hidden-accessible {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 main {
-  padding-bottom: var(--qc-spacer-lg);
+  margin-bottom: var(--qc-spacer-lg);
 }
 
-.color-details {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-.color-details > div + div {
-  margin-left: var(--qc-spacer-md);
-}
-.color-details + .color-details {
-  margin-top: var(--qc-spacer-md);
-}
-
-.color-sample {
-  width: 3rem;
-  height: 3rem;
-  border-radius: 50%;
-  flex-shrink: 0;
+qc-color-doc {
+  display: block;
+  margin-bottom: var(--qc-spacer-md);
 }
 
 .title-samples {
@@ -338,10 +358,14 @@ main {
   font-family: var(--qc-font-family-header);
 }
 
+h1, h2, h3, h4, h5, h6 {
+  scroll-margin-top: 9.6rem;
+}
+
 #grid-samples {
   position: relative;
   text-align: center;
-  margin-top: 3rem;
+  margin-top: 4.8rem;
   margin-bottom: 5%;
 }
 #grid-samples .qc-row {
@@ -352,7 +376,7 @@ main {
   opacity: 0.7;
   height: 100%;
   color: white;
-  padding: 0.5rem 0;
+  padding: 0.8rem 0;
 }
 #grid-samples .qc-row:first-child {
   margin-top: 0;
@@ -372,14 +396,19 @@ main {
   height: 100%;
 }
 
-.square-box {
+#liste-elevation {
   display: flex;
-  width: 7.5rem;
-  height: 7.5rem;
+  gap: var(--qc-grid-gutter);
+  flex-wrap: wrap;
+}
+#liste-elevation [class*=qc-shading-] {
+  display: flex;
+  width: 12rem;
+  height: 12rem;
   justify-content: center;
   align-items: center;
 }
-.square-box.qc-shading-0 {
+#liste-elevation [class*=qc-shading-].qc-shading-0 {
   border: 1px solid var(--qc-color-grey-light);
 }
 
@@ -389,12 +418,32 @@ a.pseudo-hover {
 }
 a.pseudo-active {
   color: var(--qc-color-link-active);
+  text-decoration: none;
 }
-a.visited {
-  color: var(--qc-color-link-visited);
+a.pseudo-focus {
+  color: var(--qc-color-link-hover);
+  text-decoration: none;
+  outline: 2px solid var(--qc-color-link-focus-outline);
+  outline-offset: 1px;
+}
+a.pseudo-visited {
+  color: var(--qc-color-link-visited) !important;
 }
 a.not-visited:visited:not(:hover) {
   color: var(--qc-color-link-text);
+}
+
+a.pseudo-visited span.qc-ext-link-img {
+  background: var(--qc-color-link-visited) !important;
+}
+a.pseudo-focus span.qc-ext-link-img {
+  background: var(--qc-color-link-hover) !important;
+}
+a.pseudo-hover span.qc-ext-link-img {
+  background: var(--qc-color-link-hover) !important;
+}
+a.pseudo-active span.qc-ext-link-img {
+  background: var(--qc-color-link-active) !important;
 }
 
 p, h1, h2, h3, h4, h5, h6 {
@@ -406,182 +455,45 @@ table.component-attributes-description td:first-child {
   white-space: nowrap;
 }
 
-#custom-piv-search-form .input-group {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: stretch;
-}
-#custom-piv-search-form .input-group input {
-  width: 100%;
-  padding: 0.375rem 0.75rem;
-  border: 1px solid var(--qc-color-blue-dark);
-  border-right: none;
-}
-#custom-piv-search-form .input-group input:focus {
-  outline: 0.125rem solid var(--qc-color-blue-light);
-  border-right: 1px solid black;
-  z-index: 1;
-}
-#custom-piv-search-form .input-group input::-moz-placeholder {
-  font-size: var(--qc-font-size-sm);
-}
-#custom-piv-search-form .input-group input::placeholder {
-  font-size: var(--qc-font-size-sm);
-}
-#custom-piv-search-form .input-group button {
-  display: flex;
-  justify-content: center;
-  border: 1px solid var(--qc-color-blue-dark);
-  border-left: none;
-  background-color: white;
-  width: 2.6rem;
-}
-#custom-piv-search-form .input-group button:focus {
-  outline: 0.125rem solid var(--qc-color-blue-light);
-  border-left: 1px solid black;
-}
-#custom-piv-search-form .input-group button .qc-search-submit {
-  min-width: 1.5rem;
-  height: 1.5rem;
-  align-self: center;
-}
-#custom-piv-search-form .input-group button .sr-description {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  clip: rect(0 0 0 0);
-}
-
 qc-piv-footer + qc-code {
   margin-top: 0;
 }
 
-pre code.hljs {
+qc-doc-exemple {
   display: block;
-  overflow-x: auto;
-  padding: 1em;
+  margin-bottom: var(--qc-spacer-xl);
 }
 
-code.hljs {
-  padding: 3px 5px;
+dl {
+  margin: 0 0 var(--qc-spacer-content-block-mb);
 }
-
-/*!
-  Theme: Default
-  Description: Original highlight.js style
-  Author: (c) Ivan Sagalaev <maniac@softwaremaniacs.org>
-  Maintainer: @highlightjs/core-team
-  Website: https://highlightjs.org/
-  License: see project LICENSE
-  Touched: 2021
-*/
-/*
-This is left on purpose making default.css the single file that can be lifted
-as-is from the repository directly without the need for a build step
-
-Typically this "required" baseline CSS is added by `makestuff.js` during build.
-*/
-pre code.hljs {
+dl dt {
+  font-weight: var(--qc-font-weight-content-medium);
+}
+dl dd {
+  margin-left: 0;
+  margin-bottom: var(--qc-spacer-list-item-mb);
+}
+dl dd + dd {
+  margin-top: calc(-1 * var(--qc-spacer-list-item-mb));
+}
+dl dd + dd:has(.pseudo-focus) {
+  margin-top: calc(-1 * var(--qc-spacer-list-item-mb) + 6px);
+}
+dl.qc-list-inline dt, dl.qc-list-inline dd {
+  display: inline;
+}
+dl.qc-list-inline dt::before {
   display: block;
+  content: "";
+  margin-bottom: var(--qc-spacer-list-item-mb);
+}
+
+.table-overflow {
+  width: 100%;
   overflow-x: auto;
-  padding: 1em;
 }
 
-code.hljs {
-  padding: 3px 5px;
-}
-
-/* end baseline CSS */
-.hljs {
-  background: #F3F3F3;
-  color: #444;
-}
-
-/* Base color: saturation 0; */
-.hljs-subst {
-  /* default */
-}
-
-/* purposely ignored */
-.hljs-comment {
-  color: #697070;
-}
-
-.hljs-tag,
-.hljs-punctuation {
-  color: rgba(68, 68, 68, 0.6666666667);
-}
-
-.hljs-tag .hljs-name,
-.hljs-tag .hljs-attr {
-  color: #444;
-}
-
-.hljs-keyword,
-.hljs-attribute,
-.hljs-selector-tag,
-.hljs-meta .hljs-keyword,
-.hljs-doctag,
-.hljs-name {
-  font-weight: bold;
-}
-
-/* User color: hue: 0 */
-.hljs-type,
-.hljs-string,
-.hljs-number,
-.hljs-selector-id,
-.hljs-selector-class,
-.hljs-quote,
-.hljs-template-tag,
-.hljs-deletion {
-  color: #880000;
-}
-
-.hljs-title,
-.hljs-section {
-  color: #880000;
-  font-weight: bold;
-}
-
-.hljs-regexp,
-.hljs-symbol,
-.hljs-variable,
-.hljs-template-variable,
-.hljs-link,
-.hljs-selector-attr,
-.hljs-operator,
-.hljs-selector-pseudo {
-  color: #ab5656;
-}
-
-/* Language color: hue: 90; */
-.hljs-literal {
-  color: #695;
-}
-
-.hljs-built_in,
-.hljs-bullet,
-.hljs-code,
-.hljs-addition {
-  color: #397300;
-}
-
-/* Meta color: hue: 200 */
-.hljs-meta {
-  color: #1f7199;
-}
-
-.hljs-meta .hljs-string {
-  color: #38a;
-}
-
-/* Misc effects */
-.hljs-emphasis {
-  font-style: italic;
-}
-
-.hljs-strong {
-  font-weight: bold;
+hr {
+  max-width: var(--qc-max-content-width);
 }
