--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -717,11 +717,6 @@ ul ul {
   list-style: circle;
 }
 
-dl,
-dd {
-  margin: 0;
-}
-
 .qc-shading-0 {
   border: 1px solid var(--qc-box_shadow-0-color);
 }
@@ -1140,12 +1135,6 @@ qc-icon {
   -webkit-mask-size: 100% 100%;
           mask-size: 100% 100%;
 }
-.qc-icon[data-img-type=checkmark] {
-  -webkit-mask: url("data:image/svg+xml;base64,data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M8.76,56.2c-6.38-6.34,3.26-16,9.64-9.69L38,65.88,80.56,23.29c6.38-6.38,16.07,3.32,9.69,9.69L42.84,80.37a6.83,6.83,0,0,1-9.65,0Z'/%3E%3C/svg%3E") no-repeat;
-          mask: url("data:image/svg+xml;base64,data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M8.76,56.2c-6.38-6.34,3.26-16,9.64-9.69L38,65.88,80.56,23.29c6.38-6.38,16.07,3.32,9.69,9.69L42.84,80.37a6.83,6.83,0,0,1-9.65,0Z'/%3E%3C/svg%3E") no-repeat;
-  -webkit-mask-size: 100% 100%;
-          mask-size: 100% 100%;
-}
 .qc-icon.qc-icon-sm {
   min-width: 12px;
   height: 12px;
@@ -1478,7 +1467,7 @@ qc-piv-header {
 
 qc-piv-header a,
 .qc-piv-header a {
-  --qc-color-link-focus-outline: var(--qc-color-blue-pale);
+  --qc-color-link-focus-outline: white;
   --qc-color-link-hover: white;
   --qc-color-link-text: white;
   --qc-color-link-visited: white;
@@ -1790,10 +1779,10 @@ qc-search-input {
 qc-search-bar {
   position: relative;
   display: block;
+  max-width: 64rem;
 }
 
 .qc-search-bar {
-  max-width: 64rem;
   width: 100%;
   border: 0;
 }
@@ -1844,60 +1833,52 @@ qc-search-bar {
   background-color: rgba(var(--qc-color-grey-light-rgb), 0.16);
 }
 
-.qc-check-row {
+.qc-radio-md, .qc-radio-sm {
   display: flex;
   align-items: center;
   min-height: var(--qc-spacer-md);
   margin: 0;
-  padding: 0;
 }
-.qc-check-row input[type=radio],
-.qc-check-row input[type=checkbox] {
+.qc-radio-md input[type=radio], .qc-radio-sm input[type=radio] {
+  -moz-appearance: none;
+       appearance: none;
+  -webkit-appearance: none;
+  cursor: pointer;
   display: flex;
   position: relative;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  cursor: pointer;
   margin: 0;
   background-color: var(--qc-color-white);
   border-style: solid;
   border-color: var(--qc-color-blue-dark);
-  width: var(--qc-spacer-md);
-  height: var(--qc-spacer-md);
-  border-width: 2px;
+  border-radius: 100%;
 }
-.qc-check-row input[type=radio]::before,
-.qc-check-row input[type=checkbox]::before {
+.qc-radio-md input[type=radio]::before, .qc-radio-sm input[type=radio]::before {
   content: "";
   position: absolute;
   margin: auto;
-  inset: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
   overflow: hidden;
-  opacity: 0;
 }
-.qc-check-row input[type=radio]:focus,
-.qc-check-row input[type=checkbox]:focus {
-  outline: 2px solid var(--qc-color-blue-light);
+.qc-radio-md input[type=radio]:focus, .qc-radio-sm input[type=radio]:focus {
+  outline: 0.2rem solid var(--qc-color-blue-light);
   outline-offset: 0;
   border-color: var(--qc-color-blue-dark) !important;
-  border-width: 2px;
 }
-.qc-check-row input[type=radio]:checked,
-.qc-check-row input[type=checkbox]:checked {
+.qc-radio-md input[type=radio]:checked, .qc-radio-sm input[type=radio]:checked {
   border-color: var(--qc-color-blue-regular);
 }
-.qc-check-row input[type=radio]:disabled,
-.qc-check-row input[type=checkbox]:disabled {
+.qc-radio-md input[type=radio]:disabled, .qc-radio-sm input[type=radio]:disabled {
   cursor: not-allowed;
   border-color: var(--qc-color-grey-light);
 }
-.qc-check-row input[type=radio]:disabled + label,
-.qc-check-row input[type=checkbox]:disabled + label {
+.qc-radio-md input[type=radio]:disabled + label, .qc-radio-sm input[type=radio]:disabled + label {
   color: var(--qc-color-grey-regular);
   cursor: not-allowed;
 }
-.qc-check-row label {
+.qc-radio-md label, .qc-radio-sm label {
   display: flex;
   align-items: end;
   cursor: pointer;
@@ -1909,103 +1890,177 @@ qc-search-bar {
   font-weight: var(--qc-font-weight-regular);
 }
 
-.qc-compact input[type=radio],
-.qc-compact input[type=checkbox] {
+input[type=radio]::before {
+  height: 0;
+  width: 0;
+}
+
+.qc-radio-sm input {
   width: var(--qc-spacer-sm);
   height: var(--qc-spacer-sm);
-  border-width: 1px;
+  border-width: 0.1rem;
+}
+.qc-radio-sm input[type=radio]:checked::before {
+  border: 0.5rem solid transparent;
+  border-radius: 100%;
+  background: var(--qc-color-blue-regular);
+  transition: all 160ms ease-in-out;
 }
 
-.qc-check-row input[type=radio] {
+.qc-radio-md input {
+  width: var(--qc-spacer-md);
+  height: var(--qc-spacer-md);
+  border-width: 0.2rem;
+}
+.qc-radio-md input[type=radio]:checked::before {
+  border: 0.7rem solid transparent;
   border-radius: 100%;
-}
-.qc-check-row input[type=radio]::before {
-  width: 1.4rem;
-  height: 1.4rem;
-  border-radius: 100%;
-  background-color: var(--qc-color-blue-regular);
-}
-.qc-check-row input[type=radio]:checked::before {
-  opacity: 1;
-}
-.qc-compact input[type=radio]::before {
-  width: 1rem;
-  height: 1rem;
+  background: var(--qc-color-blue-regular);
+  transition: all 160ms ease-in-out;
 }
 
-.qc-fieldset {
+.qc-radio-fieldset {
   display: flex;
   flex-direction: column;
   border: none;
-  padding: 0;
-  margin: 0 0 var(--qc-spacer-content-block-mb);
-  justify-items: center;
-  row-gap: var(--qc-spacer-sm);
-}
-.qc-fieldset legend {
-  font-weight: var(--qc-font-weight-content-bold);
-  display: -webkit-box;
+  padding: 0.001em 0 0 0;
+  margin-left: var(--qc-spacer-xs);
   margin-bottom: var(--qc-spacer-sm);
-}
-.qc-fieldset.qc-compact {
-  margin-bottom: var(--qc-spacer-sm);
-}
-
-.qc-fieldset-disabled legend {
-  color: var(--qc-color-grey-regular);
-}
-
-.qc-fieldset-required {
   font-size: var(--qc-font-size-md);
   line-height: var(--qc-line-height-md);
   font-weight: var(--qc-font-weight-bold);
+}
+
+.qc-radio-group-md, .qc-radio-group-sm {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+}
+
+.qc-radio-legend {
+  display: flex;
+  flex-direction: row;
+}
+
+.qc-radio-group-sm {
+  margin-top: var(--qc-spacer-sm);
+  row-gap: var(--qc-spacer-xs);
+}
+
+.qc-radio-group-md {
+  margin-top: var(--qc-spacer-md);
+  row-gap: var(--qc-spacer-sm);
+}
+
+.qc-radio-required {
   display: flex;
   color: var(--qc-color-red-regular);
   margin-left: var(--qc-spacer-xs);
 }
 
-.qc-fieldset-invalid, .qc-checkbox-single.qc-checkbox-single-invalid,
-.qc-fieldset-invalid legend,
-.qc-checkbox-single.qc-checkbox-single-invalid legend {
-  border-left: 2px solid var(--qc-color-red-regular);
-  padding-left: var(--qc-spacer-xs);
+.qc-fieldset-invalid {
+  box-shadow: 0.2rem 0 var(--qc-color-red-regular) inset;
 }
 
-.qc-fieldset-invalid legend, .qc-checkbox-single.qc-checkbox-single-invalid legend {
-  margin-left: calc(-1 * var(--qc-spacer-xs) - 2px);
+.qc-radio-invalid {
+  display: flex;
+  color: var(--qc-color-red-regular);
+  margin-top: var(--qc-spacer-sm);
+  align-items: center;
+}
+.qc-radio-invalid .qc-radio-invalid-icon {
+  display: flex;
+  align-items: center;
+  margin-right: var(--qc-spacer-xs);
+}
+.qc-radio-invalid.qc-radio-invalid-visible {
+  min-height: var(--qc-spacer-md);
 }
 
-.qc-check-row input[type=checkbox]:checked {
+.checkbox-md, .checkbox-sm {
+  display: flex;
+  align-items: center;
+  min-height: var(--qc-spacer-md);
+  margin: 0;
+  padding: 0;
+}
+.checkbox-md input[type=checkbox], .checkbox-sm input[type=checkbox] {
+  -moz-appearance: none;
+       appearance: none;
+  -webkit-appearance: none;
+  cursor: pointer;
+  display: flex;
+  position: relative;
+  margin-right: var(--qc-spacer-xs);
+  margin-top: 0;
+  margin-left: 0;
+  background-color: var(--qc-color-white);
+  border-style: solid;
+  border-color: var(--qc-color-blue-dark);
+  transition: all 160ms ease-in-out;
+}
+.checkbox-md input[type=checkbox]::before, .checkbox-sm input[type=checkbox]::before {
+  content: "";
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  overflow: hidden;
+}
+.checkbox-md input[type=checkbox]:focus, .checkbox-sm input[type=checkbox]:focus {
+  outline: 0.2rem solid var(--qc-color-blue-light);
+  outline-offset: 0;
+  border-color: var(--qc-color-blue-dark) !important;
+}
+.checkbox-md input[type=checkbox]:checked, .checkbox-sm input[type=checkbox]:checked {
   background-color: var(--qc-color-blue-regular);
+  border-color: var(--qc-color-blue-regular);
 }
-.qc-check-row input[type=checkbox]:checked::before {
-  width: 1.2rem;
-  height: 0.7rem;
-  border: 0.3rem solid var(--qc-color-blue-regular);
-  border-top: 0;
-  border-right: 0;
-  transform: rotate(-45deg);
-  top: 0.2rem;
-}
-.qc-check-row input[type=checkbox]:checked::after {
+.checkbox-md input[type=checkbox]:checked::after, .checkbox-sm input[type=checkbox]:checked::after {
   content: "";
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M8.76,56.2c-6.38-6.34,3.26-16,9.64-9.69L38,65.88,80.56,23.29c6.38-6.38,16.07,3.32,9.69,9.69L42.84,80.37a6.83,6.83,0,0,1-9.65,0Z'/%3E%3C/svg%3E");
-          mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M8.76,56.2c-6.38-6.34,3.26-16,9.64-9.69L38,65.88,80.56,23.29c6.38-6.38,16.07,3.32,9.69,9.69L42.84,80.37a6.83,6.83,0,0,1-9.65,0Z'/%3E%3C/svg%3E");
+  width: 16px;
+  height: 12px;
+  mask-image: url("../../../../public/img/checkmark.svg");
+  -webkit-mask-image: url("../../../../public/img/checkmark.svg");
+  mask-size: contain;
   -webkit-mask-size: contain;
-          mask-size: contain;
+  mask-repeat: no-repeat;
   -webkit-mask-repeat: no-repeat;
-          mask-repeat: no-repeat;
+  mask-position: center;
   -webkit-mask-position: center;
-          mask-position: center;
   background-color: var(--qc-color-white);
-  width: var(--qc-spacer-md);
-  height: 1.8rem;
 }
-.qc-compact input[type=checkbox]:checked::before {
+.checkbox-md input[type=checkbox]:disabled, .checkbox-sm input[type=checkbox]:disabled {
+  cursor: not-allowed;
+  border-color: var(--qc-color-grey-light);
+}
+.checkbox-md input[type=checkbox]:disabled + label, .checkbox-sm input[type=checkbox]:disabled + label {
+  color: var(--qc-color-grey-regular);
+  cursor: not-allowed;
+}
+.checkbox-md label, .checkbox-sm label {
+  display: flex;
+  align-items: end;
+  cursor: pointer;
+  margin-right: var(--qc-spacer-xs);
+  margin-bottom: 0;
+  font-size: var(--qc-font-size-md);
+  line-height: var(--qc-line-height-md);
+  font-weight: var(--qc-font-weight-regular);
+}
+
+.checkbox-sm input {
+  width: var(--qc-spacer-sm);
+  height: var(--qc-spacer-sm);
+  border-width: 0.1rem;
+}
+.checkbox-sm input[type=checkbox]:checked::before {
   width: 0.8rem;
   height: 0.5rem;
   border: 0.2rem solid var(--qc-color-blue-regular);
@@ -2014,27 +2069,82 @@ qc-search-bar {
   transform: rotate(-45deg);
   top: 0.1rem;
 }
-.qc-compact input[type=checkbox]:checked::after {
-  width: var(--qc-spacer-sm);
-  height: 1.2rem;
+
+.checkbox-md input {
+  width: var(--qc-spacer-md);
+  height: var(--qc-spacer-md);
+  border-width: 0.2rem;
+}
+.checkbox-md input[type=checkbox]:checked::before {
+  width: 1.2rem;
+  height: 0.7rem;
+  border: 0.3rem solid var(--qc-color-blue-regular);
+  border-top: 0;
+  border-right: 0;
+  transform: rotate(-45deg);
+  top: 0.2rem;
 }
 
-.qc-checkbox-single {
-  margin-bottom: var(--qc-spacer-content-block-mb);
+.checkbox-single {
+  padding-left: var(--qc-spacer-xs);
 }
-.qc-form-error {
+.checkbox-single.checkbox-single-invalid {
+  box-shadow: 0.2rem 0 var(--qc-color-red-regular) inset;
+}
+
+.qc-checkbox-fieldset {
+  display: flex;
+  flex-direction: column;
+  border: none;
+  padding: 0.001em 0 0 0;
+  margin-left: var(--qc-spacer-xs);
+  margin-bottom: var(--qc-spacer-sm);
+  font-size: var(--qc-font-size-md);
+  line-height: var(--qc-line-height-md);
+  font-weight: var(--qc-font-weight-bold);
+}
+
+.qc-checkbox-group-md, .qc-checkbox-group-sm {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+}
+
+.qc-checkbox-legend {
+  display: flex;
+  flex-direction: row;
+}
+
+.qc-checkbox-group-sm {
+  margin-top: var(--qc-spacer-sm);
+  row-gap: var(--qc-spacer-xs);
+}
+
+.qc-checkbox-group-md {
+  margin-top: var(--qc-spacer-md);
+  row-gap: var(--qc-spacer-sm);
+}
+
+.qc-checkbox-required {
+  display: flex;
+  color: var(--qc-color-red-regular);
+  margin-left: var(--qc-spacer-xs);
+}
+
+.qc-checkbox-invalid {
   display: flex;
   color: var(--qc-color-red-regular);
   align-items: center;
-  font-weight: var(--qc-font-weight-content-medium);
+  font-size: var(--qc-font-size-md);
+  line-height: var(--qc-line-height-md);
+  font-weight: var(--qc-font-weight-bold);
 }
-.qc-form-error > * {
-  margin-top: var(--qc-spacer-sm);
-}
-.qc-form-error .qc-icon {
+.qc-checkbox-invalid .qc-checkbox-invalid-icon {
   display: flex;
   align-items: center;
   margin-right: var(--qc-spacer-xs);
-  --error-icon-width: 2.4rem!important;
-  --error-icon-height: 2.1rem!important;
+}
+.qc-checkbox-invalid.qc-checkbox-invalid-visible {
+  margin-top: var(--qc-spacer-sm);
+  min-height: var(--qc-spacer-md);
 }
