--- a/src/sdg/scss/components/_pivHeader.scss
+++ b/src/sdg/scss/components/_pivHeader.scss
@@ -137,6 +137,7 @@ qc-piv-header {
 qc-piv-header,
 .qc-piv-header {
   a {
+    --qc-color-link-focus-outline: #{token-value(color blue pale)};
     --qc-color-link-hover: white;
     --qc-color-link-text: white;
     --qc-color-link-visited: white;
