--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1472,6 +1472,7 @@ qc-piv-header {
 
 qc-piv-header a,
 .qc-piv-header a {
+  --qc-color-link-focus-outline: var(--qc-color-blue-pale);
   --qc-color-link-hover: white;
   --qc-color-link-text: white;
   --qc-color-link-visited: white;
