Unification des styles de bouton entre les formats sm et md

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -1833,34 +1833,18 @@ qc-search-bar {
   background-color: rgba(var(--qc-color-grey-light-rgb), 0.16);
 }
 
-.qc-radio-sm input {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  background-color: var(--qc-color-red-dark);
-  border-radius: 100%;
-}
-
-.qc-radio-sm input {
-  width: 1.6rem;
-  height: 1.6rem;
-}
-
-.qc-radio-md input[type=radio] {
+.qc-radio-md input[type=radio], .qc-radio-sm input[type=radio] {
   -moz-appearance: none;
        appearance: none;
   -webkit-appearance: none;
-  width: 2.4rem;
-  height: 2.4rem;
   display: inline-block;
   position: relative;
   background-color: var(--qc-color-white);
   border-style: solid;
   border-color: var(--qc-color-blue-dark);
-  border-width: 0.2rem;
-  border-radius: calc(infinity * 1px);
+  border-radius: 100%;
 }
-.qc-radio-md input[type=radio]::before {
+.qc-radio-md input[type=radio]::before, .qc-radio-sm input[type=radio]::before {
   content: "";
   position: absolute;
   margin: auto;
@@ -1870,18 +1854,36 @@ qc-search-bar {
   overflow: hidden;
   top: 0;
 }
-.qc-radio-md input[type=radio]:focus {
+.qc-radio-md input[type=radio]:focus, .qc-radio-sm input[type=radio]:focus {
   outline: 0.2rem solid var(--qc-color-blue-light);
 }
-.qc-radio-md input[type=radio]:disabled {
+.qc-radio-md input[type=radio]:disabled, .qc-radio-sm input[type=radio]:disabled {
   border-color: var(--qc-color-grey-light);
 }
-.qc-radio-md input[type=radio]::before {
+
+input[type=radio]::before {
   height: 0;
   width: 0;
 }
+
+.qc-radio-sm input {
+  width: 1.6rem;
+  height: 1.6rem;
+  border-width: 0.1rem;
+}
+.qc-radio-sm input[type=radio]:checked::before {
+  border: 0.5rem solid transparent;
+  border-radius: 100%;
+  background: var(--qc-color-blue-regular);
+}
+
+.qc-radio-md input {
+  width: 2.4rem;
+  height: 2.4rem;
+  border-width: 0.2rem;
+}
 .qc-radio-md input[type=radio]:checked::before {
   border: 0.7rem solid transparent;
-  border-radius: calc(infinity * 1px);
+  border-radius: 100%;
   background: var(--qc-color-blue-regular);
 }
