--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1856,6 +1856,10 @@ qc-search-bar {
 }
 .qc-radio-md input[type=radio]:focus, .qc-radio-sm input[type=radio]:focus {
   outline: 0.2rem solid var(--qc-color-blue-light);
+  border-color: var(--qc-color-blue-dark) !important;
+}
+.qc-radio-md input[type=radio]:checked, .qc-radio-sm input[type=radio]:checked {
+  border-color: var(--qc-color-blue-regular);
 }
 .qc-radio-md input[type=radio]:disabled, .qc-radio-sm input[type=radio]:disabled {
   border-color: var(--qc-color-grey-light);
@@ -1886,6 +1890,11 @@ input[type=radio]::before {
   border: 0.7rem solid transparent;
   border-radius: 100%;
   background: var(--qc-color-blue-regular);
+}
+
+.radio-options {
+  display: flex;
+  flex-direction: column;
 }
 
 .qc-container,
