Ajout d'un asterisque pour identifier les groupes obligatoires

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -1904,3 +1904,7 @@ input[type=radio]::before {
 .radio-options {
   justify-content: center;
 }
+
+.required {
+  color: var(--qc-color-red-regular);
+}
