Debut d'ajout de la documentation dans index.html

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -1905,6 +1905,6 @@ input[type=radio]::before {
   justify-content: center;
 }
 
-.required {
+.radio-required {
   color: var(--qc-color-red-regular);
 }
