--- a/src/sdg/scss/components/_radioButton.scss
+++ b/src/sdg/scss/components/_radioButton.scss
@@ -2,18 +2,22 @@
 @use "../lib/mixins" as *;
 
 %radio-style {
-  display: block;
-  justify-items: center;
+  display: flex;
+  align-items: center;
+  margin: 0;
+  //height: rem(32);
 
   // Reference pour le style: https://www.scottohara.me/blog/2021/09/24/custom-radio-checkbox-again.html
   input[type="radio"] {
     appearance: none;
     -webkit-appearance: none;
 
-    display: inline-block;
+    display: flex;
     position: relative;
 
-    margin-right: rem(8);
+    margin-left: token-value(spacer, xs);
+    margin-right: token-value(spacer, xs);
+    margin-top: 0;
 
     background-color: token-value(color, white);
     border-style: solid;
@@ -27,8 +31,8 @@
       left: 0;
       right: 0;
       bottom: 0;
-      overflow: hidden;
       top: 0;
+      overflow: hidden;
     }
 
     &:focus {
@@ -44,6 +48,19 @@
     &:disabled {
       border-color: token-value(color, grey, light);
     }
+
+    &:disabled+label {
+        color: token-value(color, grey, regular);
+        cursor: not-allowed;
+    }
+  }
+
+  label {
+    cursor: pointer;
+    display: flex;
+    align-items: end;
+    margin-right: token-value(spacer, xs);
+    margin-bottom: 0;
   }
 }
 
@@ -66,6 +83,10 @@ input[type=radio]::before {
     border-radius: 100%;
     background: token-value(color, blue, regular);
   }
+
+  label {
+    @include content-font(sm);
+  }
 }
 
 .qc-radio-md {
@@ -84,6 +105,6 @@ input[type=radio]::before {
   }
 
   label {
-    text-align: center;
+    @include content-font(md);
   }
 }
