Ajout de qc-icon en warning dans le div de champ obligatoire

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -1946,6 +1946,12 @@ input[type=radio]::before {
   display: flex;
   color: var(--qc-color-red-regular);
   margin-left: var(--qc-spacer-xs);
+  align-items: center;
+}
+.qc-radio-fieldset-md:has(input:user-invalid) .qc-radio-invalid p, .qc-radio-fieldset-sm:has(input:user-invalid) .qc-radio-invalid p {
+  margin-left: var(--qc-spacer-xs);
+  margin-bottom: 0;
+  align-items: center;
 }
 
 .qc-radio-fieldset-sm {
@@ -1953,11 +1959,17 @@ input[type=radio]::before {
   line-height: var(--qc-line-height-sm);
   font-weight: var(--qc-font-weight-bold);
 }
+.qc-radio-fieldset-sm .qc-radio-invalid {
+  margin-top: 1.6rem;
+}
 
 .qc-radio-fieldset-md {
   font-size: var(--qc-font-size-md);
   line-height: var(--qc-line-height-md);
   font-weight: var(--qc-font-weight-bold);
+}
+.qc-radio-fieldset-md .qc-radio-invalid {
+  margin-top: 2.4rem;
 }
 
 .radio-options {
