Ajout des pseudo-elements d'erreur autour des boutons radio

--- a/src/sdg/scss/components/_radioButton.scss
+++ b/src/sdg/scss/components/_radioButton.scss
@@ -5,7 +5,15 @@
   display: flex;
   align-items: center;
   margin: 0;
-  //height: rem(32);
+
+  &:has(input:user-invalid)::before {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    outline: rem(1) solid token-value(color, red, regular);
+    outline-offset: rem(2);
+    margin-left: token-value(spacer, xs);
+  }
 
   // Reference pour le style: https://www.scottohara.me/blog/2021/09/24/custom-radio-checkbox-again.html
   input[type="radio"] {
@@ -71,6 +79,12 @@ input[type=radio]::before {
 
 .qc-radio-sm {
   @extend %radio-style;
+
+  &:has(input:user-invalid)::before {
+    width: rem(16);
+    height: rem(16);
+  }
+
   input {
     width: rem(16);
     height: rem(16);
@@ -84,11 +98,6 @@ input[type=radio]::before {
     background: token-value(color, blue, regular);
   }
 
-  input[type=radio]:user-invalid::after {
-    border-color: token-value(color, red, regular);
-    border-radius: 0;
-  }
-
   label {
     @include content-font(sm);
   }
@@ -96,6 +105,12 @@ input[type=radio]::before {
 
 .qc-radio-md {
   @extend %radio-style;
+
+  &:has(input:user-invalid)::before {
+    width: rem(24);
+    height: rem(24);
+  }
+
   input {
     width: rem(24);
     height: rem(24);
