Modification du CSS pour erreurs pour permettre une validation par JavaScript

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -1838,14 +1838,6 @@ qc-search-bar {
   align-items: center;
   margin: 0;
 }
-.qc-radio-md:has(input:user-invalid)::before, .qc-radio-sm:has(input:user-invalid)::before {
-  content: "";
-  display: inline-block;
-  position: absolute;
-  outline: 0.1rem solid var(--qc-color-red-regular);
-  outline-offset: 0.2rem;
-  margin-left: var(--qc-spacer-xs);
-}
 .qc-radio-md input[type=radio], .qc-radio-sm input[type=radio] {
   -moz-appearance: none;
        appearance: none;
@@ -1898,10 +1890,6 @@ input[type=radio]::before {
   width: 0;
 }
 
-.qc-radio-sm:has(input:user-invalid)::before {
-  width: 1.6rem;
-  height: 1.6rem;
-}
 .qc-radio-sm input {
   width: 1.6rem;
   height: 1.6rem;
@@ -1918,10 +1906,6 @@ input[type=radio]::before {
   font-weight: var(--qc-font-weight-regular);
 }
 
-.qc-radio-md:has(input:user-invalid)::before {
-  width: 2.4rem;
-  height: 2.4rem;
-}
 .qc-radio-md input {
   width: 2.4rem;
   height: 2.4rem;
@@ -1938,6 +1922,25 @@ input[type=radio]::before {
   font-weight: var(--qc-font-weight-regular);
 }
 
+.qc-radio-md.qc-radio-input-required-md::before, .qc-radio-sm.qc-radio-input-required-sm::before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  outline: 0.1rem solid var(--qc-color-red-regular);
+  outline-offset: 0.2rem;
+  margin-left: var(--qc-spacer-xs);
+}
+
+.qc-radio-sm.qc-radio-input-required-sm::before {
+  width: 1.6rem;
+  height: 1.6rem;
+}
+
+.qc-radio-md.qc-radio-input-required-md::before {
+  width: 2.4rem;
+  height: 2.4rem;
+}
+
 .qc-radio-required {
   color: var(--qc-color-red-regular);
 }
@@ -1950,20 +1953,6 @@ input[type=radio]::before {
 }
 .qc-radio-fieldset-md legend, .qc-radio-fieldset-sm legend {
   margin-left: var(--qc-spacer-xs);
-}
-.qc-radio-fieldset-md .qc-radio-invalid, .qc-radio-fieldset-sm .qc-radio-invalid {
-  display: none;
-}
-.qc-radio-fieldset-md:has(input:user-invalid) .qc-radio-invalid, .qc-radio-fieldset-sm:has(input:user-invalid) .qc-radio-invalid {
-  display: flex;
-  color: var(--qc-color-red-regular);
-  margin-left: var(--qc-spacer-xs);
-  align-items: center;
-}
-.qc-radio-fieldset-md:has(input:user-invalid) .qc-radio-invalid p, .qc-radio-fieldset-sm:has(input:user-invalid) .qc-radio-invalid p {
-  margin-left: var(--qc-spacer-xs);
-  margin-bottom: 0;
-  align-items: center;
 }
 
 .qc-radio-fieldset-sm {
@@ -1993,4 +1982,16 @@ input[type=radio]::before {
 .radio-options-md {
   margin-top: 2.4rem;
   margin-bottom: 2.4rem;
+}
+
+.qc-radio-invalid {
+  display: flex;
+  color: var(--qc-color-red-regular);
+  margin-left: var(--qc-spacer-xs);
+  align-items: center;
+}
+.qc-radio-invalid p {
+  margin-left: var(--qc-spacer-xs);
+  margin-bottom: 0;
+  align-items: center;
 }
